--- a/MyResume.html
+++ b/MyResume.html
@@ -205,6 +205,29 @@
 
                         <div class="info_wrap">
                             <ul>
+                                 
+                                <li>
+                                    <div class="sub_title">
+                                        2021
+                                    </div>
+
+                                    <div class="info_item">
+                                        <div class="info_title">
+                                            Web Development Intern at The Sparks Foundation.
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="sub_title">
+                                        2021
+                                    </div>
+
+                                    <div class="info_item">
+                                        <div class="info_title">
+                                            Completed Java Course in Coursera.
+                                        </div>
+                                    </div>
+                                </li>
                                 <li>
                                     <div class="sub_title">
                                         2019
